third_party/move/move-compiler-v2/tests/file-format-generator/operators.exp

Diagnostics:
error: no matching declaration of `<<`
  ┌─ tests/file-format-generator/operators.move:7:9
  │
7 │         x << y & x | y >> x ^ y
  │         ^^^^^^
  │
  = outruled candidate `<<(u8, u8): u8` (expected `u8` but found `u64` for argument 1)
  = outruled candidate `<<(u16, u8): u16` (expected `u16` but found `u64` for argument 1)
  = outruled candidate `<<(u32, u8): u32` (expected `u32` but found `u64` for argument 1)
  = outruled candidate `<<(u64, u8): u64` (expected `u8` but found `u64` for argument 2)
  = outruled candidate `<<(u128, u8): u128` (expected `u128` but found `u64` for argument 1)
  = outruled candidate `<<(u256, u8): u256` (expected `u256` but found `u64` for argument 1)

error: no matching declaration of `>>`
  ┌─ tests/file-format-generator/operators.move:7:22
  │
7 │         x << y & x | y >> x ^ y
  │                      ^^^^^^
  │
  = outruled candidate `>>(u8, u8): u8` (expected `u8` but found `u64` for argument 1)
  = outruled candidate `>>(u16, u8): u16` (expected `u16` but found `u64` for argument 1)
  = outruled candidate `>>(u32, u8): u32` (expected `u32` but found `u64` for argument 1)
  = outruled candidate `>>(u64, u8): u64` (expected `u8` but found `u64` for argument 2)
  = outruled candidate `>>(u128, u8): u128` (expected `u128` but found `u64` for argument 1)
  = outruled candidate `>>(u256, u8): u256` (expected `u256` but found `u64` for argument 1)
